# project-chronos-2026

./: PROJECT.md  cloudbuild.yaml  firebase.json  firestore.rules  phase2_feature_roadmap.md  telemetry_buffer.db
.agents/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md
.agents/auditor_gdpr/: BRIEFING.md  ORIGINAL_REQUEST.md  audit_report.md  handoff.md  progress.md
.agents/auditor_gdpr_fixes/: BRIEFING.md  ORIGINAL_REQUEST.md  audit_report.md  handoff.md  progress.md
.agents/auditor_m3_1/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/auditor_sm2_4/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_sm2_4_final/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_sm2_4_fix/: BRIEFING.md  ORIGINAL_REQUEST.md  (+3 more)
.firebase/: hosting.ZnJvbnRlbmQtYW5ndWxhci9kaXN0L2Zyb250ZW5kLWFuZ3VsYXIvYnJvd3Nlcg.cache
backend-functions/: package-lock.json  package.json
chromeos-extension/: background.js  content.js  manifest.json
edge-daemon/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  chronos-applet  cmake_install.cmake  edge-daemon  edge-daemon-adversarial  edge-daemon-tests  telemetry_buffer.db
edge-daemon/Testing/Temporary/: CTestCostData.txt
edge-daemon/src/: applet.cpp  differential_privacy.cpp  differential_privacy.h  main.cpp
edge-daemon/tests/: adversarial_suite.cpp  api_test.py  differential_privacy_test.cpp  gdpr_adversarial_test.cpp  gdpr_fixed_verification_test.cpp
frontend-angular/: README.md  angular.json  package-lock.json  package.json
tla-specs/: LifeCentricScheduler.tla
(+313 files in other folders)
